[gd_scene load_steps=17 format=4 uid="uid://2q6coynrxygo"]

[ext_resource type="Script" path="res://dev folders/Fei/fei.gd" id="1_gkh45"]
[ext_resource type="TileSet" uid="uid://jwt18fwp2jfw" path="res://assets/other/second_tileset.tres" id="3_f8wic"]
[ext_resource type="PackedScene" uid="uid://gqnayxf0c328" path="res://dev folders/Louie/game_hud.tscn" id="3_feewc"]
[ext_resource type="Script" path="res://dev folders/Louie/world_tile.gd" id="7_plexj"]
[ext_resource type="TileSet" uid="uid://c6jxr8hae8twk" path="res://assets/other/border_tileset.tres" id="8_yo8l7"]
[ext_resource type="AudioStream" uid="uid://d3j0lrkcesuv6" path="res://assets/landing.wav" id="9_sol1j"]
[ext_resource type="Script" path="res://dev folders/Louie/shader_manager.gd" id="11_cu3tn"]
[ext_resource type="Texture2D" uid="uid://c2ya2io01jcrh" path="res://assets/sprites/grounds_and_walls/surground.png" id="11_jp838"]
[ext_resource type="PackedScene" uid="uid://bfr1iq4ikii7f" path="res://scenes/instantiable/closing_effect.tscn" id="12_biype"]
[ext_resource type="AudioStream" uid="uid://xbbylr5a663y" path="res://assets/sound/music/final_music.mp3" id="12_qr4xf"]
[ext_resource type="PackedScene" uid="uid://bag0tu0804u4w" path="res://game_over.tscn" id="13_c0tpg"]
[ext_resource type="Script" path="res://dev folders/Louie/music_manager.gd" id="13_elem2"]
[ext_resource type="Script" path="res://dev folders/Louie/enemy_spawner.gd" id="15_gvcq0"]
[ext_resource type="Script" path="res://dev folders/Louie/cave_generator.gd" id="15_l2qxf"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_yvcyr"]
texture = ExtResource("11_jp838")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
11:1/0 = 0
12:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
0:5/0 = 0
0:5/0/terrain_set = 0
0:5/0/terrain = 0
0:5/0/terrains_peering_bit/bottom_side = 0
1:5/0 = 0
1:5/0/terrain_set = 0
1:5/0/terrain = 0
1:5/0/terrains_peering_bit/right_side = 0
1:5/0/terrains_peering_bit/bottom_side = 0
2:5/0 = 0
2:5/0/terrain_set = 0
2:5/0/terrain = 0
2:5/0/terrains_peering_bit/right_side = 0
2:5/0/terrains_peering_bit/bottom_side = 0
2:5/0/terrains_peering_bit/left_side = 0
3:5/0 = 0
3:5/0/terrain_set = 0
3:5/0/terrain = 0
3:5/0/terrains_peering_bit/bottom_side = 0
3:5/0/terrains_peering_bit/left_side = 0
4:5/0 = 0
4:5/0/terrain_set = 0
4:5/0/terrain = 0
4:5/0/terrains_peering_bit/right_side = 0
4:5/0/terrains_peering_bit/bottom_side = 0
4:5/0/terrains_peering_bit/left_side = 0
4:5/0/terrains_peering_bit/top_left_corner = 0
4:5/0/terrains_peering_bit/top_side = 0
5:5/0 = 0
5:5/0/terrain_set = 0
5:5/0/terrain = 0
5:5/0/terrains_peering_bit/right_side = 0
5:5/0/terrains_peering_bit/bottom_right_corner = 0
5:5/0/terrains_peering_bit/bottom_side = 0
5:5/0/terrains_peering_bit/left_side = 0
6:5/0 = 0
6:5/0/terrain_set = 0
6:5/0/terrain = 0
6:5/0/terrains_peering_bit/right_side = 0
6:5/0/terrains_peering_bit/bottom_side = 0
6:5/0/terrains_peering_bit/bottom_left_corner = 0
6:5/0/terrains_peering_bit/left_side = 0
7:5/0 = 0
7:5/0/terrain_set = 0
7:5/0/terrain = 0
7:5/0/terrains_peering_bit/right_side = 0
7:5/0/terrains_peering_bit/bottom_side = 0
7:5/0/terrains_peering_bit/left_side = 0
7:5/0/terrains_peering_bit/top_side = 0
7:5/0/terrains_peering_bit/top_right_corner = 0
8:5/0 = 0
8:5/0/terrain_set = 0
8:5/0/terrain = 0
8:5/0/terrains_peering_bit/right_side = 0
8:5/0/terrains_peering_bit/bottom_right_corner = 0
8:5/0/terrains_peering_bit/bottom_side = 0
9:5/0 = 0
9:5/0/terrain_set = 0
9:5/0/terrain = 0
9:5/0/terrains_peering_bit/right_side = 0
9:5/0/terrains_peering_bit/bottom_right_corner = 0
9:5/0/terrains_peering_bit/bottom_side = 0
9:5/0/terrains_peering_bit/bottom_left_corner = 0
9:5/0/terrains_peering_bit/left_side = 0
9:5/0/terrains_peering_bit/top_side = 0
10:5/0 = 0
10:5/0/terrain_set = 0
10:5/0/terrain = 0
10:5/0/terrains_peering_bit/right_side = 0
10:5/0/terrains_peering_bit/bottom_right_corner = 0
10:5/0/terrains_peering_bit/bottom_side = 0
10:5/0/terrains_peering_bit/bottom_left_corner = 0
10:5/0/terrains_peering_bit/left_side = 0
11:5/0 = 0
11:5/0/terrain_set = 0
11:5/0/terrain = 0
11:5/0/terrains_peering_bit/bottom_side = 0
11:5/0/terrains_peering_bit/bottom_left_corner = 0
11:5/0/terrains_peering_bit/left_side = 0
0:6/0 = 0
0:6/0/terrain_set = 0
0:6/0/terrain = 0
0:6/0/terrains_peering_bit/bottom_side = 0
0:6/0/terrains_peering_bit/top_side = 0
1:6/0 = 0
1:6/0/terrain_set = 0
1:6/0/terrain = 0
1:6/0/terrains_peering_bit/right_side = 0
1:6/0/terrains_peering_bit/bottom_side = 0
1:6/0/terrains_peering_bit/top_side = 0
2:6/0 = 0
2:6/0/terrain_set = 0
2:6/0/terrain = 0
2:6/0/terrains_peering_bit/right_side = 0
2:6/0/terrains_peering_bit/bottom_side = 0
2:6/0/terrains_peering_bit/left_side = 0
2:6/0/terrains_peering_bit/top_side = 0
3:6/0 = 0
3:6/0/terrain_set = 0
3:6/0/terrain = 0
3:6/0/terrains_peering_bit/bottom_side = 0
3:6/0/terrains_peering_bit/left_side = 0
3:6/0/terrains_peering_bit/top_side = 0
4:6/0 = 0
4:6/0/terrain_set = 0
4:6/0/terrain = 0
4:6/0/terrains_peering_bit/right_side = 0
4:6/0/terrains_peering_bit/bottom_right_corner = 0
4:6/0/terrains_peering_bit/bottom_side = 0
4:6/0/terrains_peering_bit/top_side = 0
5:6/0 = 0
5:6/0/terrain_set = 0
5:6/0/terrain = 0
5:6/0/terrains_peering_bit/right_side = 0
5:6/0/terrains_peering_bit/bottom_right_corner = 0
5:6/0/terrains_peering_bit/bottom_side = 0
5:6/0/terrains_peering_bit/bottom_left_corner = 0
5:6/0/terrains_peering_bit/left_side = 0
5:6/0/terrains_peering_bit/top_side = 0
5:6/0/terrains_peering_bit/top_right_corner = 0
6:6/0 = 0
6:6/0/terrain_set = 0
6:6/0/terrain = 0
6:6/0/terrains_peering_bit/right_side = 0
6:6/0/terrains_peering_bit/bottom_right_corner = 0
6:6/0/terrains_peering_bit/bottom_side = 0
6:6/0/terrains_peering_bit/bottom_left_corner = 0
6:6/0/terrains_peering_bit/left_side = 0
6:6/0/terrains_peering_bit/top_left_corner = 0
6:6/0/terrains_peering_bit/top_side = 0
7:6/0 = 0
7:6/0/terrain_set = 0
7:6/0/terrain = 0
7:6/0/terrains_peering_bit/bottom_side = 0
7:6/0/terrains_peering_bit/bottom_left_corner = 0
7:6/0/terrains_peering_bit/left_side = 0
7:6/0/terrains_peering_bit/top_side = 0
8:6/0 = 0
8:6/0/terrain_set = 0
8:6/0/terrain = 0
8:6/0/terrains_peering_bit/right_side = 0
8:6/0/terrains_peering_bit/bottom_right_corner = 0
8:6/0/terrains_peering_bit/bottom_side = 0
8:6/0/terrains_peering_bit/top_side = 0
8:6/0/terrains_peering_bit/top_right_corner = 0
9:6/0 = 0
9:6/0/terrain_set = 0
9:6/0/terrain = 0
9:6/0/terrains_peering_bit/right_side = 0
9:6/0/terrains_peering_bit/bottom_side = 0
9:6/0/terrains_peering_bit/bottom_left_corner = 0
9:6/0/terrains_peering_bit/left_side = 0
9:6/0/terrains_peering_bit/top_side = 0
9:6/0/terrains_peering_bit/top_right_corner = 0
11:6/0 = 0
11:6/0/terrain_set = 0
11:6/0/terrain = 0
11:6/0/terrains_peering_bit/right_side = 0
11:6/0/terrains_peering_bit/bottom_side = 0
11:6/0/terrains_peering_bit/bottom_left_corner = 0
11:6/0/terrains_peering_bit/left_side = 0
11:6/0/terrains_peering_bit/top_left_corner = 0
11:6/0/terrains_peering_bit/top_side = 0
0:7/0 = 0
0:7/0/terrain_set = 0
0:7/0/terrain = 0
0:7/0/terrains_peering_bit/top_side = 0
1:7/0 = 0
1:7/0/terrain_set = 0
1:7/0/terrain = 0
1:7/0/terrains_peering_bit/right_side = 0
1:7/0/terrains_peering_bit/top_side = 0
2:7/0 = 0
2:7/0/terrain_set = 0
2:7/0/terrain = 0
2:7/0/terrains_peering_bit/right_side = 0
2:7/0/terrains_peering_bit/left_side = 0
2:7/0/terrains_peering_bit/top_side = 0
3:7/0 = 0
3:7/0/terrain_set = 0
3:7/0/terrain = 0
3:7/0/terrains_peering_bit/left_side = 0
3:7/0/terrains_peering_bit/top_side = 0
4:7/0 = 0
4:7/0/terrain_set = 0
4:7/0/terrain = 0
4:7/0/terrains_peering_bit/right_side = 0
4:7/0/terrains_peering_bit/bottom_side = 0
4:7/0/terrains_peering_bit/top_side = 0
4:7/0/terrains_peering_bit/top_right_corner = 0
5:7/0 = 0
5:7/0/terrain_set = 0
5:7/0/terrain = 0
5:7/0/terrains_peering_bit/right_side = 0
5:7/0/terrains_peering_bit/bottom_right_corner = 0
5:7/0/terrains_peering_bit/bottom_side = 0
5:7/0/terrains_peering_bit/left_side = 0
5:7/0/terrains_peering_bit/top_left_corner = 0
5:7/0/terrains_peering_bit/top_side = 0
5:7/0/terrains_peering_bit/top_right_corner = 0
6:7/0 = 0
6:7/0/terrain_set = 0
6:7/0/terrain = 0
6:7/0/terrains_peering_bit/right_side = 0
6:7/0/terrains_peering_bit/bottom_side = 0
6:7/0/terrains_peering_bit/bottom_left_corner = 0
6:7/0/terrains_peering_bit/left_side = 0
6:7/0/terrains_peering_bit/top_left_corner = 0
6:7/0/terrains_peering_bit/top_side = 0
6:7/0/terrains_peering_bit/top_right_corner = 0
7:7/0 = 0
7:7/0/terrain_set = 0
7:7/0/terrain = 0
7:7/0/terrains_peering_bit/bottom_side = 0
7:7/0/terrains_peering_bit/left_side = 0
7:7/0/terrains_peering_bit/top_left_corner = 0
7:7/0/terrains_peering_bit/top_side = 0
8:7/0 = 0
8:7/0/terrain_set = 0
8:7/0/terrain = 0
8:7/0/terrains_peering_bit/right_side = 0
8:7/0/terrains_peering_bit/bottom_right_corner = 0
8:7/0/terrains_peering_bit/bottom_side = 0
8:7/0/terrains_peering_bit/left_side = 0
8:7/0/terrains_peering_bit/top_side = 0
8:7/0/terrains_peering_bit/top_right_corner = 0
9:7/0 = 0
9:7/0/terrain_set = 0
9:7/0/terrain = 0
9:7/0/terrains_peering_bit/right_side = 0
9:7/0/terrains_peering_bit/bottom_right_corner = 0
9:7/0/terrains_peering_bit/bottom_side = 0
9:7/0/terrains_peering_bit/bottom_left_corner = 0
9:7/0/terrains_peering_bit/left_side = 0
9:7/0/terrains_peering_bit/top_left_corner = 0
9:7/0/terrains_peering_bit/top_side = 0
9:7/0/terrains_peering_bit/top_right_corner = 0
10:7/0 = 0
10:7/0/terrain_set = 0
10:7/0/terrain = 0
10:7/0/terrains_peering_bit/right_side = 0
10:7/0/terrains_peering_bit/bottom_right_corner = 0
10:7/0/terrains_peering_bit/bottom_side = 0
10:7/0/terrains_peering_bit/left_side = 0
10:7/0/terrains_peering_bit/top_left_corner = 0
10:7/0/terrains_peering_bit/top_side = 0
11:7/0 = 0
11:7/0/terrain_set = 0
11:7/0/terrain = 0
11:7/0/terrains_peering_bit/bottom_side = 0
11:7/0/terrains_peering_bit/bottom_left_corner = 0
11:7/0/terrains_peering_bit/left_side = 0
11:7/0/terrains_peering_bit/top_left_corner = 0
11:7/0/terrains_peering_bit/top_side = 0
0:8/0 = 0
0:8/0/terrain_set = 0
0:8/0/terrain = 0
1:8/0 = 0
1:8/0/terrain_set = 0
1:8/0/terrain = 0
1:8/0/terrains_peering_bit/right_side = 0
2:8/0 = 0
2:8/0/terrain_set = 0
2:8/0/terrain = 0
2:8/0/terrains_peering_bit/right_side = 0
2:8/0/terrains_peering_bit/left_side = 0
3:8/0 = 0
3:8/0/terrain_set = 0
3:8/0/terrain = 0
3:8/0/terrains_peering_bit/left_side = 0
4:8/0 = 0
4:8/0/terrain_set = 0
4:8/0/terrain = 0
4:8/0/terrains_peering_bit/right_side = 0
4:8/0/terrains_peering_bit/bottom_side = 0
4:8/0/terrains_peering_bit/bottom_left_corner = 0
4:8/0/terrains_peering_bit/left_side = 0
4:8/0/terrains_peering_bit/top_side = 0
5:8/0 = 0
5:8/0/terrain_set = 0
5:8/0/terrain = 0
5:8/0/terrains_peering_bit/right_side = 0
5:8/0/terrains_peering_bit/left_side = 0
5:8/0/terrains_peering_bit/top_side = 0
5:8/0/terrains_peering_bit/top_right_corner = 0
6:8/0 = 0
6:8/0/terrain_set = 0
6:8/0/terrain = 0
6:8/0/terrains_peering_bit/right_side = 0
6:8/0/terrains_peering_bit/left_side = 0
6:8/0/terrains_peering_bit/top_left_corner = 0
6:8/0/terrains_peering_bit/top_side = 0
7:8/0 = 0
7:8/0/terrain_set = 0
7:8/0/terrain = 0
7:8/0/terrains_peering_bit/right_side = 0
7:8/0/terrains_peering_bit/bottom_right_corner = 0
7:8/0/terrains_peering_bit/bottom_side = 0
7:8/0/terrains_peering_bit/left_side = 0
7:8/0/terrains_peering_bit/top_side = 0
8:8/0 = 0
8:8/0/terrain_set = 0
8:8/0/terrain = 0
8:8/0/terrains_peering_bit/right_side = 0
8:8/0/terrains_peering_bit/top_side = 0
8:8/0/terrains_peering_bit/top_right_corner = 0
9:8/0 = 0
9:8/0/terrain_set = 0
9:8/0/terrain = 0
9:8/0/terrains_peering_bit/right_side = 0
9:8/0/terrains_peering_bit/left_side = 0
9:8/0/terrains_peering_bit/top_left_corner = 0
9:8/0/terrains_peering_bit/top_side = 0
9:8/0/terrains_peering_bit/top_right_corner = 0
10:8/0 = 0
10:8/0/terrain_set = 0
10:8/0/terrain = 0
10:8/0/terrains_peering_bit/right_side = 0
10:8/0/terrains_peering_bit/bottom_side = 0
10:8/0/terrains_peering_bit/left_side = 0
10:8/0/terrains_peering_bit/top_left_corner = 0
10:8/0/terrains_peering_bit/top_side = 0
10:8/0/terrains_peering_bit/top_right_corner = 0
11:8/0 = 0
11:8/0/terrain_set = 0
11:8/0/terrain = 0
11:8/0/terrains_peering_bit/left_side = 0
11:8/0/terrains_peering_bit/top_left_corner = 0
11:8/0/terrains_peering_bit/top_side = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0

[sub_resource type="TileSet" id="TileSet_4xj60"]
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Hole"
terrain_set_0/terrain_0/color = Color(0.46875, 0.5, 0.25, 1)
custom_data_layer_0/name = "type"
custom_data_layer_0/type = 4
sources/0 = SubResource("TileSetAtlasSource_yvcyr")

[node name="Fei" type="Node2D"]
script = ExtResource("1_gkh45")
debug_axis = false

[node name="CanvasLayer" parent="." instance=ExtResource("12_biype")]

[node name="game_hud" parent="." instance=ExtResource("3_feewc")]

[node name="GameOverUI" parent="game_hud" node_paths=PackedStringArray("caveGen") instance=ExtResource("13_c0tpg")]
mouse_filter = 2
caveGen = NodePath("../../CaveGenerator")

[node name="WorldTiles" type="TileMapLayer" parent="." node_paths=PackedStringArray("enemy_spawner", "cave_generator")]
unique_name_in_owner = true
tile_set = ExtResource("3_f8wic")
script = ExtResource("7_plexj")
enemy_spawner = NodePath("../EnemySpawner")
cave_generator = NodePath("../CaveGenerator")

[node name="TurnWait" type="Timer" parent="WorldTiles"]
wait_time = 0.05
one_shot = true

[node name="HiddenTiles" type="TileMapLayer" parent="WorldTiles"]
tile_set = SubResource("TileSet_4xj60")

[node name="BorderTiles" type="TileMapLayer" parent="WorldTiles"]
tile_map_data = PackedByteArray("AAD7/xoAAQAAAAcAAAD8/xoAAQABAAcAAAD9/xoAAQABAAcAAAD+/xoAAQABAAcAAAD//xoAAQABAAcAAAAAABoAAQABAAcAAAABABoAAQABAAcAAAACABoAAQABAAcAAAADABoAAQABAAcAAAAEABoAAQABAAcAAAAFABoAAQABAAcAAAAGABoAAQABAAcAAAAHABoAAQABAAcAAAAIABoAAQABAAcAAAAJABoAAQABAAcAAAAKABoAAQABAAcAAAALABoAAQABAAcAAAAMABoAAQABAAcAAAANABoAAQABAAcAAAAOABoAAQABAAcAAAAPABoAAQABAAcAAAAQABoAAQABAAcAAAARABoAAQABAAcAAAASABoAAQABAAcAAAATABoAAQABAAcAAAAUABoAAQABAAcAAAAVABoAAQABAAcAAAAWABoAAQABAAcAAAAXABoAAQABAAcAAAAYABoAAQABAAcAAAAZABoAAQABAAcAAAAaABoAAQABAAcAAAAbABoAAQABAAcAAAAcABoAAQABAAcAAAAdABoAAQABAAcAAAAeABoAAQABAAcAAAAfABoAAQABAAcAAAAgABoAAQABAAcAAAAhABoAAQABAAcAAAAiABoAAQABAAcAAAAjABoAAQABAAcAAAAkABoAAQABAAcAAAAlABoAAQABAAcAAAAmABoAAQABAAcAAAAnABoAAQABAAcAAAAoABoAAQABAAcAAAApABoAAQABAAcAAAAqABoAAQABAAcAAAArABoAAQADAAgAAAArABkAAQADAAcAAAArABgAAQADAAcAAAArABcAAQADAAcAAAArABYAAQADAAcAAAArABUAAQADAAcAAAArABQAAQADAAcAAAArABMAAQADAAcAAAArABIAAQADAAcAAAArABEAAQADAAcAAAArABAAAQADAAcAAAArAA8AAQADAAcAAAArAA4AAQADAAcAAAArAA0AAQADAAcAAAArAAwAAQADAAcAAAArAAsAAQADAAcAAAArAAoAAQADAAcAAAArAAkAAQADAAcAAAArAAgAAQADAAcAAAArAAcAAQADAAcAAAArAAYAAQADAAcAAAArAAUAAQADAAcAAAArAAQAAQADAAcAAAArAAMAAQADAAcAAAArAAIAAQADAAcAAAArAAEAAQADAAcAAAArAAAAAQADAAcAAAArAP//AQADAAcAAAArAP7/AQADAAcAAAArAP3/AQADAAcAAAArAPz/AQADAAcAAAArAPv/AQAAAAUAAAAqAPv/AQADAAUAAAApAPv/AQADAAUAAAAoAPv/AQADAAUAAAAnAPv/AQADAAUAAAAmAPv/AQADAAUAAAAlAPv/AQADAAUAAAAkAPv/AQADAAUAAAAjAPv/AQADAAUAAAAiAPv/AQADAAUAAAAhAPv/AQADAAUAAAAgAPv/AQADAAUAAAAfAPv/AQADAAUAAAAeAPv/AQADAAUAAAAdAPv/AQADAAUAAAAcAPv/AQADAAUAAAAbAPv/AQADAAUAAAAaAPv/AQADAAUAAAAZAPv/AQADAAUAAAAYAPv/AQADAAUAAAAXAPv/AQADAAUAAAAWAPv/AQADAAUAAAAVAPv/AQADAAUAAAAUAPv/AQADAAUAAAATAPv/AQADAAUAAAASAPv/AQADAAUAAAARAPv/AQADAAUAAAAQAPv/AQADAAUAAAAPAPv/AQADAAUAAAAOAPv/AQADAAUAAAANAPv/AQADAAUAAAAMAPv/AQADAAUAAAALAPv/AQADAAUAAAAKAPv/AQADAAUAAAAJAPv/AQADAAUAAAAIAPv/AQADAAUAAAAHAPv/AQADAAUAAAAGAPv/AQADAAUAAAAFAPv/AQADAAUAAAAEAPv/AQADAAUAAAADAPv/AQADAAUAAAACAPv/AQADAAUAAAABAPv/AQADAAUAAAAAAPv/AQADAAUAAAD///v/AQADAAUAAAD+//v/AQADAAUAAAD9//v/AQADAAUAAAD8//v/AQADAAUAAAD7//v/AQABAAgAAAD7//z/AQABAAUAAAD7//3/AQABAAUAAAD7//7/AQABAAUAAAD7////AQABAAUAAAD7/wAAAQABAAUAAAD7/wEAAQABAAUAAAD7/wIAAQABAAUAAAD7/wMAAQABAAUAAAD7/wQAAQABAAUAAAD7/wUAAQABAAUAAAD7/wYAAQABAAUAAAD7/wcAAQABAAUAAAD7/wgAAQABAAUAAAD7/wkAAQABAAUAAAD7/woAAQABAAUAAAD7/wsAAQABAAUAAAD7/wwAAQABAAUAAAD7/w0AAQABAAUAAAD7/w4AAQABAAUAAAD7/w8AAQABAAUAAAD7/xAAAQABAAUAAAD7/xEAAQABAAUAAAD7/xIAAQABAAUAAAD7/xMAAQABAAUAAAD7/xQAAQABAAUAAAD7/xUAAQABAAUAAAD7/xYAAQABAAUAAAD7/xcAAQABAAUAAAD7/xgAAQABAAUAAAD7/xkAAQABAAUAAAD6/xsAAQAAAAgAAAD6/xoAAQAAAAgAAAD6/xkAAQAAAAgAAAD6/xgAAQAAAAgAAAD6/xcAAQAAAAgAAAD6/xYAAQAAAAgAAAD6/xUAAQAAAAgAAAD6/xQAAQAAAAgAAAD6/xMAAQAAAAgAAAD6/xIAAQAAAAgAAAD6/xEAAQAAAAgAAAD6/xAAAQAAAAgAAAD6/w8AAQAAAAgAAAD6/w4AAQAAAAgAAAD6/w0AAQAAAAgAAAD6/wwAAQAAAAgAAAD6/wsAAQAAAAgAAAD6/woAAQAAAAgAAAD6/wkAAQAAAAgAAAD6/wgAAQAAAAgAAAD6/wcAAQAAAAgAAAD6/wYAAQAAAAgAAAD6/wUAAQAAAAgAAAD6/wQAAQAAAAgAAAD6/wMAAQAAAAgAAAD6/wIAAQAAAAgAAAD6/wEAAQAAAAgAAAD6/wAAAQAAAAgAAAD6////AQAAAAgAAAD6//7/AQAAAAgAAAD6//3/AQAAAAgAAAD6//z/AQAAAAgAAAD6//v/AQAAAAgAAAD6//r/AQAAAAgAAAD7//r/AQAAAAgAAAD8//r/AQAAAAgAAAD9//r/AQAAAAgAAAD+//r/AQAAAAgAAAD///r/AQAAAAgAAAAAAPr/AQAAAAgAAAABAPr/AQAAAAgAAAACAPr/AQAAAAgAAAADAPr/AQAAAAgAAAAEAPr/AQAAAAgAAAAFAPr/AQAAAAgAAAAGAPr/AQAAAAgAAAAHAPr/AQAAAAgAAAAIAPr/AQAAAAgAAAAJAPr/AQAAAAgAAAAKAPr/AQAAAAgAAAALAPr/AQAAAAgAAAAMAPr/AQAAAAgAAAANAPr/AQAAAAgAAAAOAPr/AQAAAAgAAAAPAPr/AQAAAAgAAAAQAPr/AQAAAAgAAAARAPr/AQAAAAgAAAASAPr/AQAAAAgAAAATAPr/AQAAAAgAAAAUAPr/AQAAAAgAAAAVAPr/AQAAAAgAAAAWAPr/AQAAAAgAAAAXAPr/AQAAAAgAAAAYAPr/AQAAAAgAAAAZAPr/AQAAAAgAAAAaAPr/AQAAAAgAAAAbAPr/AQAAAAgAAAAcAPr/AQAAAAgAAAAdAPr/AQAAAAgAAAAeAPr/AQAAAAgAAAAfAPr/AQAAAAgAAAAgAPr/AQAAAAgAAAAhAPr/AQAAAAgAAAAiAPr/AQAAAAgAAAAjAPr/AQAAAAgAAAAkAPr/AQAAAAgAAAAlAPr/AQAAAAgAAAAmAPr/AQAAAAgAAAAnAPr/AQAAAAgAAAAoAPr/AQAAAAgAAAApAPr/AQAAAAgAAAAqAPr/AQAAAAgAAAArAPr/AQAAAAgAAAAsAPr/AQAAAAgAAAAsAPv/AQAAAAgAAAAsAPz/AQAAAAgAAAAsAP3/AQAAAAgAAAAsAP7/AQAAAAgAAAAsAP//AQAAAAgAAAAsAAAAAQAAAAgAAAAsAAEAAQAAAAgAAAAsAAIAAQAAAAgAAAAsAAMAAQAAAAgAAAAsAAQAAQAAAAgAAAAsAAUAAQAAAAgAAAAsAAYAAQAAAAgAAAAsAAcAAQAAAAgAAAAsAAgAAQAAAAgAAAAsAAkAAQAAAAgAAAAsAAoAAQAAAAgAAAAsAAsAAQAAAAgAAAAsAAwAAQAAAAgAAAAsAA0AAQAAAAgAAAAsAA4AAQAAAAgAAAAsAA8AAQAAAAgAAAAsABAAAQAAAAgAAAAsABEAAQAAAAgAAAAsABIAAQAAAAgAAAAsABMAAQAAAAgAAAAsABQAAQAAAAgAAAAsABUAAQAAAAgAAAAsABYAAQAAAAgAAAAsABcAAQAAAAgAAAAsABgAAQAAAAgAAAAsABkAAQAAAAgAAAAsABoAAQAAAAgAAAAsABsAAQAAAAgAAAArABsAAQAAAAgAAAAqABsAAQAAAAgAAAApABsAAQAAAAgAAAAoABsAAQAAAAgAAAAnABsAAQAAAAgAAAAmABsAAQAAAAgAAAAlABsAAQAAAAgAAAAkABsAAQAAAAgAAAAjABsAAQAAAAgAAAAiABsAAQAAAAgAAAAhABsAAQAAAAgAAAAgABsAAQAAAAgAAAAfABsAAQAAAAgAAAAeABsAAQAAAAgAAAAdABsAAQAAAAgAAAAcABsAAQAAAAgAAAAbABsAAQAAAAgAAAAaABsAAQAAAAgAAAAZABsAAQAAAAgAAAAYABsAAQAAAAgAAAAXABsAAQAAAAgAAAAWABsAAQAAAAgAAAAVABsAAQAAAAgAAAAUABsAAQAAAAgAAAATABsAAQAAAAgAAAASABsAAQAAAAgAAAARABsAAQAAAAgAAAAQABsAAQAAAAgAAAAPABsAAQAAAAgAAAAOABsAAQAAAAgAAAANABsAAQAAAAgAAAAMABsAAQAAAAgAAAALABsAAQAAAAgAAAAKABsAAQAAAAgAAAAJABsAAQAAAAgAAAAIABsAAQAAAAgAAAAHABsAAQAAAAgAAAAGABsAAQAAAAgAAAAFABsAAQAAAAgAAAAEABsAAQAAAAgAAAADABsAAQAAAAgAAAACABsAAQAAAAgAAAABABsAAQAAAAgAAAAAABsAAQAAAAgAAAD//xsAAQAAAAgAAAD+/xsAAQAAAAgAAAD9/xsAAQAAAAgAAAD8/xsAAQAAAAgAAAD7/xsAAQAAAAgAAAA=")
tile_set = ExtResource("8_yo8l7")

[node name="CaveGenerator" type="Node2D" parent="." node_paths=PackedStringArray("land_sound")]
unique_name_in_owner = true
script = ExtResource("15_l2qxf")
land_sound = NodePath("Landing")

[node name="Landing" type="AudioStreamPlayer" parent="CaveGenerator"]
stream = ExtResource("9_sol1j")
volume_db = -12.0

[node name="EnemySpawner" type="Node2D" parent="." node_paths=PackedStringArray("worldTiles", "caveGen")]
script = ExtResource("15_gvcq0")
worldTiles = NodePath("../WorldTiles")
caveGen = NodePath("../CaveGenerator")

[node name="Music" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("12_qr4xf")
volume_db = 10.0
parameters/looping = true
script = ExtResource("13_elem2")

[node name="ShaderManager" type="Node2D" parent="."]
script = ExtResource("11_cu3tn")

[connection signal="closing_finished" from="CanvasLayer" to="ShaderManager" method="_on_canvas_layer_closing_finished"]
